Fix layout issues for tablets.

--- a/css/creative.css
+++ b/css/creative.css
@@ -175,7 +175,7 @@ header .header-content .header-content-inner p {
   font-size: 16px;
   margin-bottom: 50px;
 }
-@media (min-width: 768px) {
+@media (min-width: 1024px) {
   header {
     min-height: 100%;
   }
