--- a/css/main.css
+++ b/css/main.css
@@ -23,3 +23,9 @@ p.first-letter::first-letter {
   font-weight: 600;
   font-size: 16px;
 }
+
+@media (max-width: 1024px) {
+  .portfolio-box-caption .portfolio-box-caption-content .project-name {
+    display: none;
+  }
+}
